terraform/security_groups.tf
#=========================================================
#Security Group (Firewall)
#=========================================================

resource "aws_security_group" "web_sg" {
    name        = "web-sg"
    description = "Permite HTTP e SSH"
    vpc_id = aws_vpc.main.id


#Regras de entrada
    ingress {
        description = "HTTP"
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks  = ["0.0.0.0/0"]
    }

    ingress {
        description = "SSH"
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

#Regras de saída
    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
